src/main/java/org/timmc/johnny/gen/parse/RFC_3986_6874Parser.java
// Generated from src/main/grammar/RFC_3986_6874.g4 by ANTLR 4.7.1
package org.timmc.johnny.gen.parse;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RFC_3986_6874Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EXCLAMATION=1, POUND=2, DOLLAR=3, PERCENT=4, AMPERSAND=5, APOSTROPHE=6, 
		LEFT_PAREN=7, RIGHT_PAREN=8, ASTERISK=9, PLUS=10, COMMA=11, DASH=12, PERIOD=13, 
		SLASH=14, ZERO=15, ONE=16, TWO=17, THREE=18, FOUR=19, FIVE=20, SIX=21, 
		SEVEN=22, EIGHT=23, NINE=24, COLON=25, SEMICOLON=26, EQUALS=27, QUESTION=28, 
		AT=29, CAP_A=30, CAP_B=31, CAP_C=32, CAP_D=33, CAP_E=34, CAP_F=35, CAP_G=36, 
		CAP_H=37, CAP_I=38, CAP_J=39, CAP_K=40, CAP_L=41, CAP_M=42, CAP_N=43, 
		CAP_O=44, CAP_P=45, CAP_Q=46, CAP_R=47, CAP_S=48, CAP_T=49, CAP_U=50, 
		CAP_V=51, CAP_W=52, CAP_X=53, CAP_Y=54, CAP_Z=55, LEFT_BRACE=56, RIGHT_BRACE=57, 
		UNDERSCORE=58, A=59, B=60, C=61, D=62, E=63, F=64, G=65, H=66, I=67, J=68, 
		K=69, L=70, M=71, N=72, O=73, P=74, Q=75, R=76, S=77, T=78, U=79, V=80, 
		W=81, X=82, Y=83, Z=84, TILDE=85;
	public static final int
		RULE_uri = 0, RULE_hier_part = 1, RULE_uri_reference = 2, RULE_relative_ref = 3, 
		RULE_relative_part = 4, RULE_scheme = 5, RULE_authority = 6, RULE_userinfo = 7, 
		RULE_host = 8, RULE_port = 9, RULE_ipvfuture = 10, RULE_ipv6address = 11, 
		RULE_h16 = 12, RULE_ls32 = 13, RULE_ipv4address = 14, RULE_dec_octet = 15, 
		RULE_reg_name = 16, RULE_path_abempty = 17, RULE_path_absolute = 18, RULE_path_noscheme = 19, 
		RULE_path_rootless = 20, RULE_path_empty = 21, RULE_segment = 22, RULE_segment_nz = 23, 
		RULE_segment_nz_nc = 24, RULE_pchar = 25, RULE_query = 26, RULE_fragment_1 = 27, 
		RULE_pct_encoded = 28, RULE_unreserved = 29, RULE_sub_delims = 30, RULE_ip_literal = 31, 
		RULE_zoneid = 32, RULE_ipv6addrz = 33, RULE_alpha = 34, RULE_digit = 35, 
		RULE_hexdig = 36;
	public static final String[] ruleNames = {
		"uri", "hier_part", "uri_reference", "relative_ref", "relative_part", 
		"scheme", "authority", "userinfo", "host", "port", "ipvfuture", "ipv6address", 
		"h16", "ls32", "ipv4address", "dec_octet", "reg_name", "path_abempty", 
		"path_absolute", "path_noscheme", "path_rootless", "path_empty", "segment", 
		"segment_nz", "segment_nz_nc", "pchar", "query", "fragment_1", "pct_encoded", 
		"unreserved", "sub_delims", "ip_literal", "zoneid", "ipv6addrz", "alpha", 
		"digit", "hexdig"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'!'", "'#'", "'$'", "'%'", "'&'", "'''", "'('", "')'", "'*'", "'+'", 
		"','", "'-'", "'.'", "'/'", "'0'", "'1'", "'2'", "'3'", "'4'", "'5'", 
		"'6'", "'7'", "'8'", "'9'", "':'", "';'", "'='", "'?'", "'@'", "'A'", 
		"'B'", "'C'", "'D'", "'E'", "'F'", "'G'", "'H'", "'I'", "'J'", "'K'", 
		"'L'", "'M'", "'N'", "'O'", "'P'", "'Q'", "'R'", "'S'", "'T'", "'U'", 
		"'V'", "'W'", "'X'", "'Y'", "'Z'", "'['", "']'", "'_'", "'a'", "'b'", 
		"'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'i'", "'j'", "'k'", "'l'", 
		"'m'", "'n'", "'o'", "'p'", "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", 
		"'w'", "'x'", "'y'", "'z'", "'~'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EXCLAMATION", "POUND", "DOLLAR", "PERCENT", "AMPERSAND", "APOSTROPHE", 
		"LEFT_PAREN", "RIGHT_PAREN", "ASTERISK", "PLUS", "COMMA", "DASH", "PERIOD", 
		"SLASH", "ZERO", "ONE", "TWO", "THREE", "FOUR", "FIVE", "SIX", "SEVEN", 
		"EIGHT", "NINE", "COLON", "SEMICOLON", "EQUALS", "QUESTION", "AT", "CAP_A", 
		"CAP_B", "CAP_C", "CAP_D", "CAP_E", "CAP_F", "CAP_G", "CAP_H", "CAP_I", 
		"CAP_J", "CAP_K", "CAP_L", "CAP_M", "CAP_N", "CAP_O", "CAP_P", "CAP_Q", 
		"CAP_R", "CAP_S", "CAP_T", "CAP_U", "CAP_V", "CAP_W", "CAP_X", "CAP_Y", 
		"CAP_Z", "LEFT_BRACE", "RIGHT_BRACE", "UNDERSCORE", "A", "B", "C", "D", 
		"E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", 
		"S", "T", "U", "V", "W", "X", "Y", "Z", "TILDE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RFC_3986_6874.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RFC_3986_6874Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class UriContext extends ParserRuleContext {
		public SchemeContext scheme() {
			return getRuleContext(SchemeContext.class,0);
		}
		public TerminalNode COLON() { return getToken(RFC_3986_6874Parser.COLON, 0); }
		public Hier_partContext hier_part() {
			return getRuleContext(Hier_partContext.class,0);
		}
		public TerminalNode QUESTION() { return getToken(RFC_3986_6874Parser.QUESTION, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode POUND() { return getToken(RFC_3986_6874Parser.POUND, 0); }
		public Fragment_1Context fragment_1() {
			return getRuleContext(Fragment_1Context.class,0);
		}
		public UriContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uri; }
	}

	public final UriContext uri() throws RecognitionException {
		UriContext _localctx = new UriContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_uri);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			scheme();
			setState(75);
			match(COLON);
			setState(76);
			hier_part();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(77);
				match(QUESTION);
				setState(78);
				query();
				}
			}

			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POUND) {
				{
				setState(81);
				match(POUND);
				setState(82);
				fragment_1();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hier_partContext extends ParserRuleContext {
		public AuthorityContext authority() {
			return getRuleContext(AuthorityContext.class,0);
		}
		public Path_abemptyContext path_abempty() {
			return getRuleContext(Path_abemptyContext.class,0);
		}
		public List<TerminalNode> SLASH() { return getTokens(RFC_3986_6874Parser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(RFC_3986_6874Parser.SLASH, i);
		}
		public Path_absoluteContext path_absolute() {
			return getRuleContext(Path_absoluteContext.class,0);
		}
		public Path_rootlessContext path_rootless() {
			return getRuleContext(Path_rootlessContext.class,0);
		}
		public Path_emptyContext path_empty() {
			return getRuleContext(Path_emptyContext.class,0);
		}
		public Hier_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hier_part; }
	}

	public final Hier_partContext hier_part() throws RecognitionException {
		Hier_partContext _localctx = new Hier_partContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_hier_part);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				{
				setState(85);
				match(SLASH);
				setState(86);
				match(SLASH);
				}
				setState(88);
				authority();
				setState(89);
				path_abempty();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				path_absolute();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				path_rootless();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				path_empty();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Uri_referenceContext extends ParserRuleContext {
		public UriContext uri() {
			return getRuleContext(UriContext.class,0);
		}
		public Relative_refContext relative_ref() {
			return getRuleContext(Relative_refContext.class,0);
		}
		public Uri_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uri_reference; }
	}

	public final Uri_referenceContext uri_reference() throws RecognitionException {
		Uri_referenceContext _localctx = new Uri_referenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_uri_reference);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				uri();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				relative_ref();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relative_refContext extends ParserRuleContext {
		public Relative_partContext relative_part() {
			return getRuleContext(Relative_partContext.class,0);
		}
		public TerminalNode QUESTION() { return getToken(RFC_3986_6874Parser.QUESTION, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode POUND() { return getToken(RFC_3986_6874Parser.POUND, 0); }
		public Fragment_1Context fragment_1() {
			return getRuleContext(Fragment_1Context.class,0);
		}
		public Relative_refContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relative_ref; }
	}

	public final Relative_refContext relative_ref() throws RecognitionException {
		Relative_refContext _localctx = new Relative_refContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relative_ref);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			relative_part();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(101);
				match(QUESTION);
				setState(102);
				query();
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POUND) {
				{
				setState(105);
				match(POUND);
				setState(106);
				fragment_1();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relative_partContext extends ParserRuleContext {
		public AuthorityContext authority() {
			return getRuleContext(AuthorityContext.class,0);
		}
		public Path_abemptyContext path_abempty() {
			return getRuleContext(Path_abemptyContext.class,0);
		}
		public List<TerminalNode> SLASH() { return getTokens(RFC_3986_6874Parser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(RFC_3986_6874Parser.SLASH, i);
		}
		public Path_absoluteContext path_absolute() {
			return getRuleContext(Path_absoluteContext.class,0);
		}
		public Path_noschemeContext path_noscheme() {
			return getRuleContext(Path_noschemeContext.class,0);
		}
		public Path_emptyContext path_empty() {
			return getRuleContext(Path_emptyContext.class,0);
		}
		public Relative_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relative_part; }
	}

	public final Relative_partContext relative_part() throws RecognitionException {
		Relative_partContext _localctx = new Relative_partContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_relative_part);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				{
				setState(109);
				match(SLASH);
				setState(110);
				match(SLASH);
				}
				setState(112);
				authority();
				setState(113);
				path_abempty();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				path_absolute();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				path_noscheme();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				path_empty();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemeContext extends ParserRuleContext {
		public List<AlphaContext> alpha() {
			return getRuleContexts(AlphaContext.class);
		}
		public AlphaContext alpha(int i) {
			return getRuleContext(AlphaContext.class,i);
		}
		public List<DigitContext> digit() {
			return getRuleContexts(DigitContext.class);
		}
		public DigitContext digit(int i) {
			return getRuleContext(DigitContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(RFC_3986_6874Parser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(RFC_3986_6874Parser.PLUS, i);
		}
		public List<TerminalNode> DASH() { return getTokens(RFC_3986_6874Parser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(RFC_3986_6874Parser.DASH, i);
		}
		public List<TerminalNode> PERIOD() { return getTokens(RFC_3986_6874Parser.PERIOD); }
		public TerminalNode PERIOD(int i) {
			return getToken(RFC_3986_6874Parser.PERIOD, i);
		}
		public SchemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scheme; }
	}

	public final SchemeContext scheme() throws RecognitionException {
		SchemeContext _localctx = new SchemeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_scheme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			alpha();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << DASH) | (1L << PERIOD) | (1L << ZERO) | (1L << ONE) | (1L << TWO) | (1L << THREE) | (1L << FOUR) | (1L << FIVE) | (1L << SIX) | (1L << SEVEN) | (1L << EIGHT) | (1L << NINE) | (1L << CAP_A) | (1L << CAP_B) | (1L << CAP_C) | (1L << CAP_D) | (1L << CAP_E) | (1L << CAP_F) | (1L << CAP_G) | (1L << CAP_H) | (1L << CAP_I) | (1L << CAP_J) | (1L << CAP_K) | (1L << CAP_L) | (1L << CAP_M) | (1L << CAP_N) | (1L << CAP_O) | (1L << CAP_P) | (1L << CAP_Q) | (1L << CAP_R) | (1L << CAP_S) | (1L << CAP_T) | (1L << CAP_U) | (1L << CAP_V) | (1L << CAP_W) | (1L << CAP_X) | (1L << CAP_Y) | (1L << CAP_Z) | (1L << A) | (1L << B) | (1L << C) | (1L << D) | (1L << E))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (F - 64)) | (1L << (G - 64)) | (1L << (H - 64)) | (1L << (I - 64)) | (1L << (J - 64)) | (1L << (K - 64)) | (1L << (L - 64)) | (1L << (M - 64)) | (1L << (N - 64)) | (1L << (O - 64)) | (1L << (P - 64)) | (1L << (Q - 64)) | (1L << (R - 64)) | (1L << (S - 64)) | (1L << (T - 64)) | (1L << (U - 64)) | (1L << (V - 64)) | (1L << (W - 64)) | (1L << (X - 64)) | (1L << (Y - 64)) | (1L << (Z - 64)))) != 0)) {
				{
				setState(126);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CAP_A:
				case CAP_B:
				case CAP_C:
				case CAP_D:
				case CAP_E:
				case CAP_F:
				case CAP_G:
				case CAP_H:
				case CAP_I:
				case CAP_J:
				case CAP_K:
				case CAP_L:
				case CAP_M:
				case CAP_N:
				case CAP_O:
				case CAP_P:
				case CAP_Q:
				case CAP_R:
				case CAP_S:
				case CAP_T:
				case CAP_U:
				case CAP_V:
				case CAP_W:
				case CAP_X:
				case CAP_Y:
				case CAP_Z:
				case A:
				case B:
				case C:
				case D:
				case E:
				case F:
				case G:
				case H:
				case I:
				case J:
				case K:
				case L:
				case M:
				case N:
				case O:
				case P:
				case Q:
				case R:
				case S:
				case T:
				case U:
				case V:
				case W:
				case X:
				case Y:
				case Z:
					{
					setState(121);
					alpha();
					}
					break;
				case ZERO:
				case ONE:
				case TWO:
				case THREE:
				case FOUR:
				case FIVE:
				case SIX:
				case SEVEN:
				case EIGHT:
				case NINE:
					{
					setState(122);
					digit();
					}
					break;
				case PLUS:
					{
					setState(123);
					match(PLUS);
					}
					break;
				case DASH:
					{
					setState(124);
					match(DASH);
					}
					break;
				case PERIOD:
					{
					setState(125);
					match(PERIOD);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuthorityContext extends ParserRuleContext {
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public UserinfoContext userinfo() {
			return getRuleContext(UserinfoContext.class,0);
		}
		public TerminalNode AT() { return getToken(RFC_3986_6874Parser.AT, 0); }
		public TerminalNode COLON() { return getToken(RFC_3986_6874Parser.COLON, 0); }
		public PortContext port() {
			return getRuleContext(PortContext.class,0);
		}
		public AuthorityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_authority; }
	}

	public final AuthorityContext authority() throws RecognitionException {
		AuthorityContext _localctx = new AuthorityContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_authority);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(131);
				userinfo();
				setState(132);
				match(AT);
				}
				break;
			}
			setState(136);
			host();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(137);
				match(COLON);
				setState(138);
				port();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UserinfoContext extends ParserRuleContext {
		public List<UnreservedContext> unreserved() {
			return getRuleContexts(UnreservedContext.class);
		}
		public UnreservedContext unreserved(int i) {
			return getRuleContext(UnreservedContext.class,i);
		}
		public List<Pct_encodedContext> pct_encoded() {
			return getRuleContexts(Pct_encodedContext.class);
		}
		public Pct_encodedContext pct_encoded(int i) {
			return getRuleContext(Pct_encodedContext.class,i);
		}
		public List<Sub_delimsContext> sub_delims() {
			return getRuleContexts(Sub_delimsContext.class);
		}
		public Sub_delimsContext sub_delims(int i) {
			return getRuleContext(Sub_delimsContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(RFC_3986_6874Parser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(RFC_3986_6874Parser.COLON, i);
		}
		public UserinfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userinfo; }
	}
